# dssdata

./: .gitignore  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  DEV.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  scripts-poetry.py  sitemap.xml
.github/workflows/: deploy.yml  doc.yml  publish.yml  test.yml
LICENSE/: index.html
OpenDSS/: __init__.py
PowerFlow/: __init__.py
api/: index.html
docs/: LICENSE.md  index.md
docs/api/: index.md
docs/css/: custom.css
docs/gettingstart/: gettingstart.md  ideas.md  index.md
docs/tutorial/: index.ipynb
dssdata/: __init__.py  _formatters.py  _tools.py
dssdata/_reduces/regs/: __init__.py
dssdata/decorators/: __init__.py
dssdata/pfmodes/: __init__.py
dssdata/reductions/regs/: __init__.py
dssdata/tools/lines/: __init__.py
dssdata/tools/losses/: __init__.py
dssdata/tools/regs/: __init__.py
dssdata/tools/voltages/: __init__.py
gettingstart/: index.html
gettingstart/createlements/: index.html
gettingstart/createtools/: index.html
gettingstart/gettingstart/: index.html
gettingstart/ideas/: index.html
gettingstart/makedatas/: index.html
powerflow/: __init__.py  decorators.py  formatters.py  line_tools.py  losses_tools.py  pf_modes.py  reg_tools.py  systemclass.py  tools.py  voltage_tools.py
powerflow/decorators/: __init__.py
powerflow/pf_modes/: __init__.py
powerflow/tools/: lines.py  losses.py  regs.py  voltages.py
search/: search_index.json
test/: load_datas.py  load_loss_data.py  test_Class.py  test_Losses.py  test_PowerFlow.py  test_TS.py  test_static.py  test_static_with_multline.py  utils.py
test/IEEE13bus_wihtout_solve_original/: IEEE13Nodeckt.dss  IEEE13Nodeckt_Curr_Elem.txt  IEEE13Nodeckt_EXP_CURRENTS.CSV  IEEE13Nodeckt_EXP_LOSSES.CSV  IEEE13Nodeckt_EXP_VOLTAGES.CSV  IEEE13Nodeckt_Losses.txt  IEEE13Nodeckt_VLN_Node.txt  IEEE13bus.py
test/syste_test_IEEE13bus/: IEEE13Nodeckt.dss  IEEE13Nodeckt_Curr_Elem.Txt  IEEE13Nodeckt_Curr_Seq.Txt  IEEE13Nodeckt_Losses.Txt  IEEE13Nodeckt_VLN_Node.Txt  IEEE13bus.py
test/syste_test_IEEE13bus_timeSeries/: IEEE13Nodeckt.dss  IEEE13Nodeckt_Curr_Seq.Txt  IEEE13Nodeckt_Losses.Txt  IEEE13Nodeckt_VLN_Node.Txt  IEEE13bus.py  resid_p288_new.csv
test/test_datas/: all_line_infos.json  all_v_pu_ang.json  bus_names.json  element_loss_data.json  generate_data.py  line_infos_all_13busTS.json  lines_loss_data.json  list_names.json  losses_data.json  reg_names.json  taps_changesTS.json  taps_number.json  taps_numberTS.json  total_loss_data.json  trafo_loss_data.json  v_pu_ang_all_13busTS.json
testes/: main.py
tutorial/: index.html
tutorial/IEEE13bus/: IEEE13bus.py
(+1 files in other folders)
