[tool.poetry]
name = "dssdata"
version = "0.1.7"
description = "Organizing OpenDSS data"
authors = ["Felipe M. S. Monteiro <fmarkson@outlook.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://felipemarkson.github.io/dssdata/"
repository = "https://github.com/felipemarkson/dssdata"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
]


[tool.poetry.dependencies]
python = "^3.8"
"OpenDSSDirect.py" = "^0.6.*"
pandas = "^1.*"

[tool.poetry.dev-dependencies]
flake8 = "^4.*"
black = "^22.*"
matplotlib = "^3.*"
notebook = "^6.*"
mkdocs-material = "^8.*"
mkdocstrings = "^0.*"
mkdocs-jupyter = "^0.*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
