[tool.poetry]
name = "dssdata"
version = "0.1.9"
description = "Organizing OpenDSS data"
authors = ["Felipe M. S. Monteiro <fmarkson@outlook.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://felipemarkson.github.io/dssdata/"
repository = "https://github.com/felipemarkson/dssdata"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
]


[tool.poetry.dependencies]
python = "^3.9"
"OpenDSSDirect.py" = "0.7.*"
pandas = "1.*"


[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
matplotlib = "*"
notebook = "*"
mkdocs-material = "9.*"
mkdocstrings = {version = "0.20.*", extras = ["python"]}
mkdocs-jupyter = "0.24.*"
mkdocs-autorefs = "0.4.*"
Pygments = "2.*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
